@@ -1,0 +1,4 @@
+This module provides a simple object for logging to files under the
+Log::Dispatch::* system, automatically rotating them according to
+different constraints. This is basically a Log::Dispatch::File wrapper
+with additions.
